# patchwork

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  constants.py  environment.yml  gpao_builder.py  indices_map.py  lidar_selecter.py  main.py  patchwork.py  pyproject.toml  tools.py  version.py
.github/workflows/: ci_deploy_docker.yaml  ci_pytest.yaml
configs/: config_title_stitching.yaml  configs_patchwork.yaml
examples/: patchwork_example.sh
exemples/: lidar_selecter_example.sh  patchwork_example.sh
patchwork/: constants.py  indices_map.py  lidar_selecter.py  patchwork.py  path_manipulation.py  shapefile_data_extraction.py  tools.py
test/: test_indices_map.py  test_lidar_selecter.py  test_patchwork.py  test_path_manipulation.py  test_shapefile_data_extraction.py  test_tools.py
test/configs/: config_test_mount_points.yaml
test/data/: donor_more_fields_test.las  donor_test.las  recipient_more_fields_test.laz  recipient_slided_test.laz  recipient_test.laz  recipient_with_synthetic_points.laz
test/data/donor_infos/: donor_info_673_6362_one_donor.csv  donor_info_673_6363_two_donors.csv  donor_info_674_6363_no_donor.csv
test/data/shapefile_local/: patchwork_geometries.dbf
test/data/shapefile_mounted_unix_path/: patchwork_geometries.dbf
test/data/shapefile_mounted_windows_path/: patchwork_geometries.dbf  patchwork_geometries.shx
test/data/shapefiles_nok/: patchwork_geometries_coord_not_in_all_names.dbf  patchwork_geometries_coord_not_in_all_names.shp  patchwork_geometries_no_match_for_las_tile.dbf  (+6 more)
(+2 files in other folders)
